Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106397

wasm: native keyboard does not popup on iOS

    XMLWordPrintable

Details

    • WebAssembly
    • 88fbbb422e (qt/qtbase/dev) 88fbbb422e (qt/tqtc-qtbase/dev) b2c678292e (qt/qtbase/6.4) b2c678292e (qt/tqtc-qtbase/6.4)

    Description

      The native virtual keyboard on iOS does not popup when it is supposed to.

      This is a regression.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpotter Lorn Potter
            lpotter Lorn Potter
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes