wasm: fix native keyboard popup on iOS

misspelling of element property causing issue

Fixes: QTBUG-106397
Change-Id: I8e8f6114bba6374381df4a1d9831ff36e3964658
Reviewed-by: David Skoland <david.skoland@qt.io>
(cherry picked from commit 88fbbb422e277a5dd56ae9d0f2d961362be2145e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>